# brasa-backend

./: .dev.env  .gitignore  LICENSE  backend.Dockerfile  docker-compose.yml  gunicorn_config.py  promtail-config.yml  pyproject.toml  run.sh  scraper.Dockerfile
brasa/: .dev.env  app.py  config.py  metrics_collector.py
brasa/scrapers/: volei.py
brasa/services/events/: methods.py  models.py  routes.py  structs.py
brasa/services/sports/: methods.py  models.py  routes.py  structs.py
brasa/utils/: __init__.py  logger.py  middleware.py  parsers.py  register_bots.py
project/: app.py
project/services/events/: methods.py  models.py  routes.py  structs.py
project/services/sports/: models.py  routes.py  structs.py
project/utils/: __init__.py  config.py  middleware.py  parsers.py
tests/fixtures/: fixture_flask.py
